fixed testimonials style. add lg-gap, overflow and object cover to image

--- a/src/components/Testimonials/testimonials.css
+++ b/src/components/Testimonials/testimonials.css
@@ -15,5 +15,5 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
-  margin-top:350px
+  margin-top:350px;
 }
